Remove blueprint from bgp-openconfig-state
We have some amount of configuration here, but that is rectified really
easily. Move the configuration for Config Admin and use OSGi DS instead
of blueprint.

The test suite is updated with a few FIXMEs around predictable
execution.

JIRA: BGPCEP-956
Change-Id: I3b0fe17a3dc1b685698730f897ae77c470a87ac8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>